[package]
name = "knowgraf"
version = "0.1.0"
authors = ["Kristoffer Andersson <6058164+kod-kristoff@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "knowgraf"
path = "src/bin.rs"

[dependencies]
oxigraph = { version = "0.2", features = ["sled"] }
actix-web = "3.3.2"
actix-files = "0.5.0"
serde_derive = "1.0.124"
env_logger = "0.8.3"
log = "0.4.14"
serde = "1.0.124"
derive_more = "0.99.11"
rand = "0.8.3"
mime = "0.3.16"
form_urlencoded = "1.0.1"
# paperclip = { version = "0.5.0", features = ["actix"] }

[dev-dependencies]
actix-rt = "1"
tempfile = "3.2.0"

